--- a/test.html
+++ b/test.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Secure Page</title>
+</head>
 <body>
 
 <h2>JavaScript Alert XSS Vulnerability</h2>
@@ -9,7 +14,11 @@
 <script>
 function xssFunction() {
   var userInput = prompt("Please enter your name", "Harry Potter");
-  document.getElementById("demo").innerHTML = userInput;
+  if (userInput) {
+    var safeInput = document.createElement('div');
+    safeInput.textContent = userInput;
+    document.getElementById("demo").innerHTML = safeInput.innerHTML;
+  }
 }
 </script>
 
