--- a/test.html
+++ b/test.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <title>JavaScript Alert XSS Vulnerability</title>
+</head>
 <body>
-
-<h2>JavaScript Alert XSS Vulnerability</h2>
-
-<button onclick="xssFunction()">Try it</button>
-
-<script>
-function xssFunction() {
-  var userInput = prompt("Please enter your name", "Harry Potter");
-  document.getElementById("demo").innerHTML = userInput;
-}
-</script>
-
-<p id="demo"></p>
-
+  <h2>JavaScript Alert XSS Vulnerability</h2>
+  <button onclick="xssFunction()">Try it</button>
+  <script>
+    function xssFunction() {
+      var userInput = prompt("Please enter your name", "Harry Potter");
+      document.getElementById("demo").innerHTML = userInput;
+    }
+  </script>
+  <p id="demo"></p>
 </body>
 </html>
